--- a/.github/workflows/ deploy-aws.yml
+++ b/.github/workflows/ deploy-aws.yml
@@ -33,8 +33,8 @@ on:
 env:
   AWS_REGION: ap-northeast-1                   # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: testrepo           # set this to your Amazon ECR repository name
-  ECS_SERVICE: app-service                # set this to your Amazon ECS service name
-  ECS_CLUSTER: ecs-cluster                 # set this to your Amazon ECS cluster name
+  ECS_SERVICE: simple-service               # set this to your Amazon ECS service name
+  ECS_CLUSTER: simple-ecs-cluster                # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: testrepo-task-revision1.json 
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: simple-container         # set this to the name of the container in the
